Se les aplico un placeholder a todos los campos obligatorios del formulario asi como se le añadio un min-length de 4 caracteres al campo de Pais de Residencia ya que este no fue subido en la primera version

--- a/Actividad1/Tarea-4/index.html
+++ b/Actividad1/Tarea-4/index.html
@@ -11,19 +11,19 @@
         <h1>Formulario de datos personales</h1>
         <form>
             <label for="nombre">Nombre:</label>
-            <input type="text" name="nombre" id="nombre" required minlength="3">
+            <input type="text" name="nombre" id="nombre" placeholder="Introduzca su nombre..." minlength="3">
             <br>
             <label for="apellido">Apellido:</label>
-            <input type="text" name="apellido" id="apellido" required minlength="3">
+            <input type="text" name="apellido" id="apellido" placeholder="Introduzca su apellido..." required minlength="3">
             <br>
             <label for="email">Email:</label>
-            <input type="email" name="email" id="email" required minlength="8">
+            <input type="email" name="email" id="email" placeholder="ejemplo123@gmail.com" required minlength="8">
             <br>
             <label for="fecha">Fecha de Nacimiento:</label>
             <input type="date" name="fecha" id="fecha" required>
             <br>
             <label for="pais">Pais de Residencia</label>
-            <input type="text" name="pais" id="pais" required>
+            <input type="text" name="pais" id="pais" placeholder="Introduzca el pais donde reside..." required minlength="4">
             <br>
             <input type="submit" value="Enviar">
         </form>
