--- a/Actividad1/Tarea-4/index.html
+++ b/Actividad1/Tarea-4/index.html
@@ -11,7 +11,7 @@
         <h1>Formulario de datos personales</h1>
         <form>
             <label for="nombre">Nombre:</label>
-            <input type="text" name="nombre" id="nombre" placeholder="Introduzca su nombre..." minlength="3">
+            <input type="text" name="nombre" id="nombre" placeholder="Introduzca su nombre..." required minlength="3">
             <br>
             <label for="apellido">Apellido:</label>
             <input type="text" name="apellido" id="apellido" placeholder="Introduzca su apellido..." required minlength="3">
